--- a/src/shared/Layout/styles.scss
+++ b/src/shared/Layout/styles.scss
@@ -3,6 +3,7 @@ html, body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .layout {
@@ -13,7 +14,6 @@ html, body {
 
 .content {
   flex: 1;
-  padding: 20px;
   background-color: #fff;
 }
 
