--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -1,3 +1,59 @@
-.h100 {
+.container {
+    background-color: #f1f9ff;
     height: calc(100vh - 64px);
+    color: #1d1d1d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1;
+
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+
+    .loginForm {
+        width: 100%;
+        max-width: 500px;
+        padding: 24px;
+        border-radius: 8px;
+        background-color: #fff;
+
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .title {
+        text-align: center;
+        margin: 16px;
+
+        h2 {
+            margin: 0;
+            font-size: 2rem;
+            font-weight: 600;
+            padding-bottom: 10px;
+        }
+
+        span {
+            font-size: 1rem;
+            color: #555;
+        }
+    }
+}
+
+.anotherEntry {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+
+    img {
+        padding: 10px 0;
+        width: 64px;
+    }
 }
