--- a/src/shared/Layout/sections/Navbar/styles.scss
+++ b/src/shared/Layout/sections/Navbar/styles.scss
@@ -6,6 +6,10 @@
   padding: 0;
 }
 
+.loginPage {
+  background-color: #f1f9ff;
+}
+
 /* Внутренний контейнер для центрирования */
 .container {
   max-width: 1312px;
