--- a/src/shared/Layout/sections/Navbar/styles.scss
+++ b/src/shared/Layout/sections/Navbar/styles.scss
@@ -23,9 +23,14 @@
 
 /* Логотип */
 .logo {
+  cursor: pointer;
   font-size: 20px;
   font-weight: bold;
   color: black;
+
+  &:hover {
+    opacity: 0.65;
+  }
 }
 
 /* Навбар */
