--- a/src/pages/main/styles.scss
+++ b/src/pages/main/styles.scss
@@ -1,41 +1,72 @@
 .container {
   display: flex;
-  height: 100vh; /* Высота равна высоте окна */
-  font-family: Arial, sans-serif;
+  min-height: calc(100vh - 64px); /* Высота равна высоте окна */
+  padding: 0 40px;
+  background-color: #f1f9ff;
 }
 
 .sidebar {
   width: 250px;
-  background-color: #f9f9f9;
+  background-color: #f1f9ff;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  min-height: 100vh; /* Минимальная высота равна высоте окна */
+  justify-content: space-between;
+  padding: 50px 20px;
+  min-height: calc(100vh - 64px);
 }
 
 .menu {
   display: flex;
   flex-direction: column;
-  gap: 10px; /* Расстояние между пунктами меню */
+  gap: 20px; /* Расстояние между пунктами меню */
 }
 
 .menuItem {
   font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0.1px;
   cursor: pointer;
 }
 
 .menuLink {
   text-decoration: none;
-  color: black;
+  color: #7a7a7a;
+  transition: color 0.2s ease; /* Плавная смена цвета */
+
+  .active {
+    color: #1890ff;
+  }
+
 }
 
-.menuLink:hover {
+.menuText {
+  position: relative;
+}
+
+/* Стили для пункта "Выйти" */
+.logout {
+  color: #7a7a7a;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: color 0.2s ease;
+  margin-bottom: 50px;
+}
+
+.logout:hover {
   color: #1890ff;
 }
 
 .content {
   flex-grow: 1; /* Контент растягивается на оставшееся пространство */
   padding: 20px;
-  background-color: #fff;
 }
 
+.icon {
+  font-size: 18px;
+  margin-right: 8px;
+}
