--- a/src/shared/Layout/sections/Navbar/styles.scss
+++ b/src/shared/Layout/sections/Navbar/styles.scss
@@ -6,8 +6,13 @@
   padding: 0;
 }
 
-.loginPage {
+
+.authenticatedHeader {
   background-color: #f1f9ff;
+}
+
+.landingHeader {
+  background-color: #FFF0F0;
 }
 
 /* Внутренний контейнер для центрирования */
@@ -21,32 +26,40 @@
   height: 64px;
 }
 
-/* Логотип */
 .logo {
   cursor: pointer;
   font-size: 20px;
   font-weight: bold;
   color: black;
 
+
   &:hover {
     opacity: 0.65;
   }
 }
 
-/* Навбар */
 .navbar {
   display: flex;
   align-items: center;
 }
 
-/* Имя пользователя */
-.username {
+.profile {
   margin-right: 20px;
   color: black;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.65;
+  }
+
+  .icon {
+    font-size: 18px;
+    margin-right: 8px;
+  }
 }
 
-/* Меню */
 .menu {
   background-color: transparent;
   border-bottom: none;
