--- a/src/pages/main/defaultContent/styles.scss
+++ b/src/pages/main/defaultContent/styles.scss
@@ -65,31 +65,10 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-bottom: 16px;
 
   h3 {
     margin-right: 20px;
-  }
-}
-
-.wishListItems {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  margin-top: 10px;
-}
-
-.wishListItem {
-  padding: 12px 16px;
-  border: 1px solid #d9d9d9;
-  border-radius: 8px;
-  background-color: #f5f5f5;
-  margin-bottom: 8px;
-  font-size: 16px;
-  color: #333;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: #e6f7ff;
   }
 }
 
@@ -99,4 +78,96 @@
   text-align: center;
   margin-top: 20px;
   font-style: italic;
+}
+
+.wishListItems {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 0;
+  list-style: none;
+}
+
+.wishListItem {
+  width: 270px;
+  min-height: 280px;
+  position: relative;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 24px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  color: #333;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+  }
+
+  .wishListGrid {
+    margin-top: 24px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 колонки одинаковой ширины */
+    grid-template-rows: repeat(2, auto); /* 2 строки с высотой, адаптированной под контент */
+    gap: 10px;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .wishListItemImage {
+    width: 60px;
+    height: 60px;
+    border-radius: 12px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f0f0f0;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .wishListItemHeader {
+    display: flex;
+    flex-direction: column;
+
+    h4 {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 80%;
+    }
+
+    p {
+      margin-top: 10px;
+      font-size: 16px;
+      color: #555;
+    }
+  }
+}
+
+
+.menuButton {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  color: #666;
+  padding: 5px;
+
+  &:hover {
+    color: #333;
+  }
 }
