--- a/src/pages/main/wishListDetail/styles.scss
+++ b/src/pages/main/wishListDetail/styles.scss
@@ -1,4 +1,80 @@
-.doneRow {
-  color: #9e9e9e;
-  text-decoration: line-through;
+.wishListDetail {
+
+  .title {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 10px 0;
+
+    h1 {
+      font-size: 24px;
+    }
+
+    .addButton {
+      border: 1px solid #1890ff;
+      border-radius: 12px;
+      color: #1890ff;
+      background: transparent;
+      padding: 18px 22px;
+
+      &:hover {
+        background: rgba(24, 144, 255, 0.1);
+      }
+    }
+
+  }
+
+  .backButton {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    border: none;
+    background: none;
+    font-size: 16px;
+    cursor: pointer;
+    color: rgb(166, 182, 197);;
+    padding: 5px;
+
+
+    &:hover {
+      color: #333;
+    }
+  }
+
+  .backIcon {
+    font-size: 16px;
+  }
+
+
+
+  .description {
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 20px;
+  }
+
+  .meta {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 10px;
+    background: #fff;
+    border-radius: 8px;
+    margin: 10px 0 ;
+
+    div {
+      display: flex;
+      align-items: center;
+      gap: 8px; // Расстояние между ключом и значением
+    }
+
+    .metaLabel {
+      font-weight: bold;
+    }
+  }
+
+  .doneRow {
+    color: #9e9e9e;
+    text-decoration: line-through;
+  }
 }
