--- a/src/pages/main/wishListDetail/styles.scss
+++ b/src/pages/main/wishListDetail/styles.scss
@@ -1,3 +1,5 @@
+@use "mixins";
+
 .wishListDetail {
 
   .title {
@@ -5,6 +7,12 @@
     align-items: center;
     gap: 20px;
     margin: 10px 0;
+
+    @include mixins.mobile {
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
 
     h1 {
       font-size: 24px;
@@ -46,7 +54,6 @@
   }
 
 
-
   .description {
     font-size: 16px;
     color: #555;
@@ -60,7 +67,7 @@
     padding: 10px;
     background: #fff;
     border-radius: 8px;
-    margin: 10px 0 ;
+    margin: 10px 0;
 
     div {
       display: flex;
